# projeto_streamlit

./: 01 - Projeto Prático - Parte 1.txt  cadastro.py  pyproject.toml
